# mozjs-dbus

./: .gitignore  .hgignore  Makefile.am  Makefile.in  application.ini  configure.ac  install.rdf  jar.mn
chrome/: chrome.manifest
chrome/content/: browserOverlay.xul  main.xul
chrome/content/js/: avahi.js  libnotify.js  nm.js  service.js
chrome/example-content/: browserOverlay.xul  examples.xul  main.xul
chrome/example-content/js/: avahi.js  dbus_examples.js  libnotify.js  nm.js  prototype_for_xul.js  service.js
components/: DBUS.jsm  IMozJSDBusCoreComponent.xpt  Makefile.in  mozjs_dbus.xpt
components/public/: IMozJSDBusCoreComponent.idl  Makefile.in
components/src/: Makefile.in  MozJSDBusCoreComponent.cpp  MozJSDBusCoreComponent.h  MozJSDBusCoreComponentModule.cpp  MozJSDBusMarshalling.cpp  MozJSDBusMarshalling.h
defaults/preferences/: prefs.js
modules/: DBUS.jsm  DBusXMLParser.jsm  FirefoxDBusDaemon.jsm  IPAddress.jsm  Makefile.in  ProxyUtils.jsm
src/: IMozJSDBusCoreComponent.idl  Makefile.am  MozJSDBusCoreComponent.cpp  MozJSDBusCoreComponent.h  MozJSDBusCoreComponentModule.cpp  MozJSDBusMarshalling.cpp  MozJSDBusMarshalling.h  MozJSDBusObjectPath.cpp  MozJSDBusObjectPath.h
xpi/: chrome.manifest  install.rdf
xpi/chrome/content/: browserOverlay.xul
xpi/chrome/example-content/: browserOverlay.xul  examples.xul
xpi/chrome/example-content/js/: avahi.js  dbus_examples.js  libnotify.js  nm.js  service.js
xpi/defaults/preferences/: prefs.js
xpi/modules/: DBUS.jsm  FirefoxDBusDaemon.jsm  IPAddress.jsm
